--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,13 +26,14 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="24dp"
                 android:layout_marginTop="24dp"
-                android:src="@drawable/pompiers"
-                android:layout_weight="0.54" />
+                android:layout_weight="0.54"
+                android:src="@drawable/pompiers" />
 
             <EditText
                 android:id="@+id/login_text_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:hint="@string/prompt_login"
                 android:maxLines="1" />
 
@@ -40,14 +41,17 @@
                 android:id="@+id/login_text_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:hint="@string/prompt_password"
+                android:imeOptions="actionUnspecified"
                 android:inputType="textPassword"
                 android:maxLines="1" />
 
 
             <RadioGroup
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:checkedButton="@+id/login_radio_user"
                 android:orientation="horizontal">
 
@@ -60,12 +64,14 @@
                     android:id="@+id/login_radio_user"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
                     android:text="@string/role_user" />
 
                 <RadioButton
                     android:id="@+id/login_radio_codis"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
                     android:text="@string/role_codis" />
 
             </RadioGroup>
@@ -74,8 +80,11 @@
                 android:id="@+id/login_btn_connect"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="16dp"
-                android:text="@string/action_sign_in" />
+                android:background="@color/fbutton_color_green_sea"
+                android:text="@string/action_sign_in"
+                android:textColor="@color/white" />
 
         </LinearLayout>
     </ScrollView>
